# name-vault-device

./: CMakeLists.txt  deploy.sh  piToolchain.cmake
include/: Detector.h  Display.h  LibCamera.h  VideoSource.h
src/: Detector.cpp  Display.cpp  LibCamera.cpp  VideoSource.cpp  main.cpp  test.cpp
